[package]
name = "dp832"
version = "0.1.0"
edition = "2021"

description = "Rigol DP832 power supply TUI"
authors = ["Alex Martens <alex@thinglab.org>"]
categories = ["hardware-support"]
keywords = ["rigol"]
repository = "https://github.com/newam/dp800"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.26"
dirs = "5"
dp800.path = "../dp800"
log = "0.4"
tokio = { version = "1", features = ["time", "rt", "macros"] }
tui = "0.19"
