[package]
name = "dp832"

description = "Rigol DP832 power supply TUI"
categories = ["hardware-support"]
keywords = ["rigol"]

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
crossterm = "0.29"
dirs = "6"
dp800.path = "../dp800"
log = "0.4"
ratatui = "0.30"
